Refactoring: Updated Abstract Sample Form- Updated